# EXPRPRT

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dave Alexander Expense Report 12.12.2023.xlsx  Expense Reports Template  - Legacy Tax.xlsx  Expense Reports Template - SuiteTax.csv  Expense Reports Template - SuiteTax.xlsx  POLICY.md  README.md  compose.yaml  h -u origin main  package-lock.json  package.json
.devcontainer/: devcontainer.json
backend/: .dockerignore  Cargo.toml  Dockerfile  rust-toolchain.toml
backend/migrations/: 20240201000000_initial_schema.sql  20240602000000_domain_enums.sql  20240705000000_seed_expense_fixtures.sql  20240711000000_audit_log_entity_lookup_index.sql  20240715000000_refresh_seed_expense_fixtures.sql
backend/src/: lib.rs  main.rs
backend/src/api/: mod.rs
backend/src/api/graphql/: mod.rs
backend/src/api/rest/: approvals.rs  auth.rs  expenses.rs  finance.rs  health.rs  manager.rs  mod.rs
backend/src/domain/: models.rs  policy.rs
backend/src/infrastructure/: auth.rs  config.rs  db.rs  mod.rs  netsuite.rs  state.rs
backend/src/infrastructure/storage/: mod.rs
backend/src/jobs/: mod.rs
backend/src/services/: approvals.rs  errors.rs  expenses.rs  finance.rs  manager.rs  mod.rs
backend/src/telemetry/: mod.rs
backend/src/validation/: rules.rs
backend/tests/: expenses_reports_auth.rs  manager_queue.rs  report_policy_access.rs  test_harness.rs
deployment/: README.md
docs/: architecture.md  authentication-and-reports.md  dev-manager-token.jwt  migration-notes.md
frontend/: Dockerfile  README.md  index.html  (+5 more)
(+35 files in other folders)
